# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: example1.cpp  example2.cpp
include/: print.h  print.hpp
sources/: print.cpp
tests/: test1.cpp
